--- a/css/styles.sass
+++ b/css/styles.sass
@@ -32,7 +32,6 @@
       height: 40px
       width: 205px
 
-
     .header_nav
       display: flex
       justify-content: space-between
@@ -43,11 +42,17 @@
 
     .header_nav_img
       .night_theme
-          width: 30px
-          height: 30px
+        width: 30px
+        height: 30px
+        fill: white
+        &:hover
+          fill: #F5BD41
       .account_circle
         width: 40px
         height: 40px
+        fill: white
+        &:hover
+          fill: #F5BD41
 
     .hamburger-menu
       display: none
@@ -90,12 +95,11 @@
       position: fixed
       visibility: hidden
       top: 0
-      width: 200px
+      width: 150px
       margin: 0
-      padding: 20px 0
+      padding: 15px 0
       list-style: none
       text-align: center
-      background: rgba(18, 18, 18, 0.2)
 
     .menu__item
       display: block
@@ -120,7 +124,7 @@
     #menu__toggle:checked ~ .menu__box
       visibility: visible
       right: 0
-      top: 12%
+      top: 5%
 
     .header_nav_link
       font-style: normal
@@ -331,16 +335,12 @@ h2
       color: #BFBFBF
 
   .rnd_btn_hotel
-    width: 40px
-    height: 40px
-    background: #eaf0f9
-    border-radius: 50%
     position: absolute
-    top: 128px
-    right: 0
-    transform: translateX(50%)
+    background: none
     border: none
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25)
+    right: 0
+    top: 30%
+    transform: translateX(30%)
 
 .btn-group
   display: inline-block
@@ -384,15 +384,19 @@ h2
 
 .rnd_btn_dest
   margin-top: 48px
-  width: 40px
-  height: 40px
-  background: #eaf0f9
-  border-radius: 50%
+  background: none
   position: absolute
   left: 50%
   transform: translateX(-50%)
   border: none
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25)
+.rnd_btn_right
+  display: none
+  position: absolute
+  background: none
+  border: none
+  right: 0
+  top: 35%
+  transform: translateX(40%)
 
 .sign_up
   order: 3
@@ -743,14 +747,17 @@ h2
   .destinations_main
     margin-top: 40px
 
-  .hotels_item:last-child
+  .hotels_item:nth-child(4)
     display: none
 
-  .destinations_item_name, .hotel_item_name, .hotel_item_place
+  .hotel_item_place,.hotel_item_name, .destinations_item_name
     font-size: 18px
 
-  .item_dest:last-child
+  .item_dest:nth-child(4)
     display: none
+
+  .rnd_btn_right
+    display: block
 
   .reviews
     margin-top: 120px
@@ -952,8 +959,8 @@ h2
         margin-top: 2px
         font-size: 12px
 
-      .hotels_item:nth-child(3)
-        display: none
+    .hotels_item:nth-child(3)
+      display: none
 
   .destinations
     padding-top: 34px
